# CERN_FRED

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
CI/: parser.sh  run_alfdummies.sh  run_dimclient.sh  run_mapidimclient.sh
dim/: makefile_common
dim/linux/: DimBridge  checkDimServers  checkDns  did  dim_get_service  dim_get_service_names  dim_get_services  dim_send_command  dns  testClient  testServer  test_client  test_server  webDid
examples/CRU/sections/: cru-map.section
examples/MAPI/Iterativemapi/: averagetemp.cpp
examples/MAPI/Mapigroup/: testgroup.cpp
include/FREDServer/Alfred/: print.h  queuelock.h  rpcinfo.h  types.h
include/FREDServer/Database/: databaseinterface.h  multitype.h
include/FREDServer/Fred/: alfclients.h  alfrpcinfo.h  crualfrpcinfo.h  cruregistercommand.h  fred.h  llaalfrpcinfo.h  llalock.h  queue.h  queueexecutor.h  section.h
include/FREDServer/Fred/Config/: crumapping.h  instructions.h  llamapping.h  location.h
include/FREDServer/Fred/Mapi/: indefinitemapi.h  mapi.h  scaapi.h
include/FREDServer/Fred/Protocols/: IC.h  SCA.h  SCAMFT.h  SWT.h
include/FREDServer/Mapi/basic_mapi/: mapiexample.h
include/FREDServer/Mapi/indefinite_mapi/: indefinitemapi.h
include/FREDServer/Mapi/mapigroup/: testgroup.h
include/FREDServer/Parser/: parser.h  processmessage.h  utility.h
mapi/: mapifactory.cpp
src/: DIM_WINCC_Server.h  FITDetector.h  IPbusInterface.h  PM.h  Parameter.h  TCM.h  main.cpp
src/Alfred/: alfred.cpp  dimutilities.cpp  print.cpp  queuelock.cpp  rpcinfo.cpp
src/Fred/: alfclients.cpp  alfinfo.cpp  alfrpcinfo.cpp  crualfrpcinfo.cpp  cruregistercommand.cpp  fred.cpp  fredtopics.cpp  groupcommand.cpp  llaalfrpcinfo.cpp  llalock.cpp  mappedcommand.cpp  queue.cpp  queueexecutor.cpp
src/Fred/Config/: crumapping.cpp  groups.cpp  instructions.cpp  llamapping.cpp  mapping.cpp
src/Fred/Database/: databaseinterface.cpp  multitype.cpp
src/Fred/Mapi/: indefinitemapi.cpp  iterativemapi.cpp  mapi.cpp  mapigroup.cpp
src/Fred/Protocols/: CRORC.cpp  IC.cpp  SCA.cpp  SCAMFT.cpp  SWT.cpp
src/Mapi/: mapifactory.cpp
src/Mapi/basic_mapi/: mapiexample.cpp
src/Mapi/indefinite_mapi/: indefinintemapi.cpp
src/Mapi/iterative_mapi/: averagetemp.cpp
src/Mapi/mapigroup/: testgroup.cpp
src/Parser/: parser.cpp  processmessage.cpp  utility.cpp
